src/test/ui/consts/const-eval/issue-85155.stderr
error[E0080]: evaluation of `post_monomorphization_error::ValidateConstImm::<2_i32, 0_i32, 1_i32>::VALID` failed
  --> $DIR/auxiliary/post_monomorphization_error.rs:7:17
   |
LL |         let _ = 1 / ((IMM >= MIN && IMM <= MAX) as usize);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to divide `1_usize` by zero

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
